

[workspace]
# We want to use v2 of the cargo dependency resolver.
resolver = "2"
# Our workspace members include the packages in the contracts directory.
members = [
    "contracts/voting",
    "contracts/simple_voting",
    "contracts/raffle",
    "contracts/oci_cross_contract",
    "contracts/lottery",
    "crates/nebula-importer",
    "crates/nebula-publish",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true


[workspace.dependencies.soroban-sdk]
version = "20.0.0-rc2"
