[package]
name = "nebula"
version = "0.1.0"
description = "Nebula is a tool for easing development of Soroban smart contracts"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
nebula-importer = { path = "crates/nebula-importer", optional = true}
nebula-publish = { path = "crates/nebula-publish", optional = true }

[features]
default = ["build"]
build = ["nebula-importer"]
publish = ["nebula-publish"]

[workspace]
# We want to use v2 of the cargo dependency resolver.
resolver = "2"
# Our workspace members include the packages in the contracts directory.
members = [
    "contracts/governance",
    "contracts/shared",
    "contracts/voting",
    "contracts/simple_voting",
    "contracts/raffle",
    "contracts/marketplace",
    "contracts/lottery",
    "crates/nebula-importer",
    "crates/nebula-publish",
    "examples/oci_cross_contract",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true


[workspace.dependencies.soroban-sdk]
version = "20.0.0-rc2"
