[package]
name = "governance"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path= "../shared"}

[build-dependencies]
nebula = { path = "../../" }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

# Adds nebula oci contract import
[package.metadata.nebula.imports]
voting = "ghcr.io/eigerco/nebula/contracts/voting:v0.2.0"

