[package]
name = "lottery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "0.9.2"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

[dev-dependencies]
soroban-sdk = { version = "0.9.2", features = ["testutils"] }
