[package]
name = "voting"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar_sdk = "0.1.3"
tokio = { version = "1", features = ["full"] }
stellar-xdr =  { version = "0.0.16", default-features = true, features = ["base64", "std"] }
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rstest = "0.17.0"

