[package]
name = "nebula-publish"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oci-distribution = "0.9.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
