[package]
name = "oci_cross_contract"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rstest = "0.17.0"

[build-dependencies]
nebula = { path = "../../" }

[package.metadata.nebula.imports]
voting = "ghcr.io/eigerco/nebula/contracts/voting:latest"
